# product_detection_ws

./: .gitignore  README.md  add_ros_connection_aliases.sh  docker_run.sh
src/detection_examples/: CMakeLists.txt  package.xml
src/detection_examples/examples/: test_yolo_inference.py
src/detection_examples/launch/: test_yolo_inference.launch
src/detection_msgs/: CMakeLists.txt  package.xml
src/detection_msgs/msg/: BoundingBox.msg  BoundingBoxArray.msg  DetectedObject.msg  InferenceResult.msg  InferenceResultArray.msg
src/object_detection/: CMakeLists.txt  package.xml  setup.py
src/object_detection/config/: class_list.yaml
src/object_detection/src/object_detection/: yolo_inference.py
